refactor open-api
